crates/ink/tests/ui/contract/fail/trait-message-allow-reentrancy-mismatch.stderr
error[E0308]: mismatched types
  --> tests/ui/contract/fail/trait-message-allow-reentrancy-mismatch.rs:23:9
   |
23 |         fn message(&self) {}
   |         ^^^^^^^^^^^^^^^^^^^^ expected `false`, found `true`
   |
   = note: expected struct `TraitMessageReentrant<false>`
              found struct `TraitMessageReentrant<true>`
